# all-language-hello-world

./: LICENSE  README.md  all-language-hello-world.sln  build-and-install-all-languages.ps1
all-language-hello-world/: HelloWorldAssembly.cs  HelloWorldC.cs  HelloWorldCSharp.cs  HelloWorldCpp.cs  HelloWorldGo.cs  HelloWorldJava.cs  HelloWorldJs.cs  HelloWorldPerl.cs  HelloWorldPhp.cs  HelloWorldPython.cs  HelloWorldR.cs  HelloWorldRust.cs  HelloWorldSql.cs  IHelloWorld.cs  Program.cs  all-language-hello-world.csproj
all-language-hello-world/dependencies/: .gitignore
languages/assembly/: .gitignore  HelloWorld.asm  HelloWorld.def  build_and_install.ps1
languages/c/: CMakeLists.txt  HelloWorld.c  build_and_install.ps1
languages/cpp/: CMakeLists.txt  HelloWorld.cpp  build_and_install.ps1
languages/go/: .gitignore  HelloWorld.go  build_and_install.ps1
languages/java/: .gitignore  HelloWorldClass.java  build_and_install.ps1
languages/js/: HelloWorld.js  build_and_install.ps1
languages/perl/: HelloWorld.perl  build_and_install.ps1
languages/php/: HelloWorld.php  build_and_install.ps1
languages/python/: HelloWorldPython.py  build_and_install.ps1
languages/r/: HelloWorld.r  build_and_install.ps1
languages/rust/: .gitignore  Cargo.toml  build_and_install.ps1
languages/rust/src/: lib.rs
languages/sql/: HelloWorld.db  HelloWorldQuery.sql  build_and_install.ps1
